[package]
name = "ada_antibot"
version = "0.1.0"
authors = ["Alexander Danilov <git@modos189.ru>"]
license = "GPL-3.0"
readme = "README.md"
edition = "2018"

[dependencies]
teloxide = { version = "0.5", features = ["auto-send", "macros"] }
log = "0.4"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
chrono = "0.4"
lazy_static = "^1.4.0"
tokio-stream = "0.1.3"
rusqlite = "0.25.3"
async_once = "0.2.1"

[profile.release]
lto = true